# docs/swagger.json
@@ -79,6 +79,23 @@
                 "responses": {}
             }
         },
+        "/getmsg": {
+            "get": {
+                "tags": [
+                    "消息模块"
+                ],
+                "summary": "获取用户的所有待办事项",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/getuser": {
             "get": {
                 "tags": [
