# service/msgservice.go
@@ -19,6 +19,7 @@ import (
 func AddMessageByUser(c *gin.Context) {
 	userId, _ := strconv.Atoi(c.Query("UserId"))
 	content := c.Query("Content")
+	fmt.Println(userId, content)
 	//使用雪花算法创建ID
 	if err := utils.SnowflakeInit("2023-08-30", 1); err != nil {
 		fmt.Println("Init() failed, err = ", err)
@@ -36,10 +37,9 @@ func AddMessageByUser(c *gin.Context) {
 	models.UpdateUserInfo(int64(msg.UserId))
 	//向user_msging表中添加元素
 	umsg := models.User_Msging{
-		UserID:    int64(msg.UserId),
-		InfoID:    msg.InfoID,
-		DoingTime: time.Since(msg.CreateTime),
-		Status:    0,
+		UserID: int64(msg.UserId),
+		InfoID: msg.InfoID,
+		Status: 0,
 	}
 	models.AddInfo(umsg)
 	c.JSON(200, gin.H{
@@ -77,10 +77,9 @@ func AddMessageByAdmin(c *gin.Context) {
 	models.UpdateUserInfo(int64(msg.UserId))
 	//向user_msging表中添加元素
 	umsg := models.User_Msging{
-		UserID:    int64(msg.UserId),
-		InfoID:    msg.InfoID,
-		DoingTime: time.Since(msg.CreateTime),
-		Status:    0,
+		UserID: int64(msg.UserId),
+		InfoID: msg.InfoID,
+		Status: 0,
 	}
 	models.AddInfo(umsg)
 	c.JSON(200, gin.H{
@@ -126,4 +125,26 @@ func UpdateInfoStatus(c *gin.Context) {
 			"msg":  "消息状态更新成功",
 		})
 	}
+}
+
+// GetMessage
+// @Summary 获取用户的所有待办事项
+// @Tags 消息模块
+// @param id query string false "id"
+// @Router /getmsg [get]
+func GetMessage(c *gin.Context) {
+	id, _ := strconv.Atoi(c.Query("id"))
+	data1 := models.FindMsgByName(int64(id))
+	if len(data1) == 0 {
+		c.JSON(200, gin.H{
+			"code": 200,
+			"msg":  "暂无消息",
+		})
+		return
+	}
+	c.JSON(200, gin.H{
+		"code": 200,
+		"msg":  "获取成功",
+		"data": data1,
+	})
 }
